--- a/src/telas/CadastroCorretor.form
+++ b/src/telas/CadastroCorretor.form
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<<<<<<< Upstream, based on origin/master
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="tipousuario">
     </Component>
   </NonVisualComponents>
-=======
-<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
->>>>>>> a4bd17b Ajustes em layouts
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Cadastrar Funcion&#xe1;rio"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -44,11 +39,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
               <Component id="pnlDadosCorretor" min="-2" max="-2" attributes="0"/>
-<<<<<<< Upstream, based on origin/master
               <EmptySpace pref="37" max="32767" attributes="0"/>
-=======
-              <EmptySpace pref="45" max="32767" attributes="0"/>
->>>>>>> a4bd17b Ajustes em layouts
           </Group>
       </Group>
     </DimensionLayout>
@@ -59,7 +50,6 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-<<<<<<< Upstream, based on origin/master
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="btnSalvarCorretor" min="-2" pref="71" max="-2" attributes="0"/>
@@ -88,54 +78,14 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="lblRgCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lblCpfCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
-=======
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="lblDataDeNascimentoCorretor" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="txtDataDeNascimentoCorretor" max="32767" attributes="0"/>
->>>>>>> a4bd17b Ajustes em layouts
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="lblTelefoneCorretor" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
-                                  <Component id="txtTelefoneCorretor" max="32767" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="1" attributes="0">
-                                      <Component id="lblSalarioCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="lblRgCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lblCpfCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lblNomeCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="txtNomeCorretor" max="32767" attributes="0"/>
-                                              <Component id="txtCpfCorretor" alignment="0" pref="187" max="32767" attributes="0"/>
-                                              <Component id="txtRgCorretor" alignment="0" max="32767" attributes="0"/>
-                                          </Group>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                                          <Component id="btnSalvarCorretor" min="-2" pref="71" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                                          <Component id="btnLimparCorretor" min="-2" pref="71" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                                          <Component id="btnVoltarTelaPrincipal" min="-2" pref="71" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="txtCpfCorretor" pref="223" max="32767" attributes="0"/>
+                                  <Component id="txtRgCorretor" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                       </Group>
-<<<<<<< Upstream, based on origin/master
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lblSenhaCorretor" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -152,18 +102,9 @@
                                   <Component id="radioadm" min="-2" pref="100" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-=======
-                      <Group type="102" attributes="0">
-                          <Component id="lblSenhaCorretor" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtSalarioCorretor" max="32767" attributes="0"/>
-                              <Component id="txtSenhaCorretor" pref="187" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="-2" attributes="0"/>
->>>>>>> a4bd17b Ajustes em layouts
                       </Group>
                   </Group>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -178,48 +119,40 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblRgCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtRgCorretor" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="txtRgCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblCpfCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtCpfCorretor" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="txtCpfCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblDataDeNascimentoCorretor" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
-                      <Component id="txtDataDeNascimentoCorretor" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="txtDataDeNascimentoCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblTelefoneCorretor" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
-                      <Component id="txtTelefoneCorretor" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="txtTelefoneCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblSalarioCorretor" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
                       <Component id="txtSalarioCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                          <Component id="lblSenhaCorretor" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                          <Component id="txtSenhaCorretor" min="-2" pref="29" max="-2" attributes="0"/>
-                      </Group>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblSenhaCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtSenhaCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-<<<<<<< Upstream, based on origin/master
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="radiofuncionario" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="radioadm" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="11" max="32767" attributes="0"/>
-=======
->>>>>>> a4bd17b Ajustes em layouts
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnLimparCorretor" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnVoltarTelaPrincipal" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -268,7 +201,23 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtNomeCorretor">
         </Component>
+        <Component class="javax.swing.JTextField" name="txtRgCorretor">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtRgCorretorActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtCpfCorretor">
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtDataDeNascimentoCorretor">
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtTelefoneCorretor">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTelefoneCorretorActionPerformed"/>
+          </Events>
+        </Component>
         <Component class="javax.swing.JTextField" name="txtSalarioCorretor">
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtSenhaCorretor">
         </Component>
         <Component class="javax.swing.JButton" name="btnSalvarCorretor">
           <Properties>
@@ -294,7 +243,6 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVoltarTelaPrincipalActionPerformed"/>
           </Events>
         </Component>
-<<<<<<< Upstream, based on origin/master
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="text" type="java.lang.String" value="Tipo:"/>
@@ -318,43 +266,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="administrador"/>
           </Properties>
-=======
-        <Component class="javax.swing.JFormattedTextField" name="txtDataDeNascimentoCorretor">
-          <Properties>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
-              <Format format="##/##/####" subtype="-1" type="5"/>
-            </Property>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JFormattedTextField" name="txtTelefoneCorretor">
-          <Properties>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
-              <Format format="(##) 9 ####-####" subtype="-1" type="5"/>
-            </Property>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JFormattedTextField" name="txtCpfCorretor">
-          <Properties>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
-              <Format format="###.###.###-##" subtype="-1" type="5"/>
-            </Property>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JFormattedTextField" name="txtRgCorretor">
-          <Properties>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
-              <Format format="#.###.###" subtype="-1" type="5"/>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtRgCorretorActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JPasswordField" name="txtSenhaCorretor">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSenhaCorretorActionPerformed"/>
-          </Events>
->>>>>>> a4bd17b Ajustes em layouts
         </Component>
       </SubComponents>
     </Container>
